Tweak for dataservices new API

--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
 <configuration>
 
   <appSettings>
-      <add key="ActiveDBName" value="Local"/>
+      <add key="ActiveDBName" value="Cypress"/>
       <add key="Local"        value="*Public/DG NET Local"/>
       <add key="Cypress"      value="*Public/Cypress"/>
   </appSettings>
