--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -10,12 +10,12 @@
 <configuration>
 
   <appSettings>
-      <add key="ActiveDBName" value="Local"/>
-      <add key="Local"        value="*Public/DG NET Local"/>
-      <add key="Cypress"      value="*Public/Cypress"/>
+      <add key="ActiveDBName" value="Local" />
+      <add key="Local" value="*Public/DG NET Local" />
+      <add key="Cypress" value="*Public/Cypress" />
   </appSettings>
 
-  <connectionStrings/>
+  <connectionStrings />
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -31,7 +31,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5" />
     <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
@@ -44,7 +44,7 @@
     file and add a Login.aspx page that authenticates a user. See wcUserOK 
     for a working forms authentication example with more details.     
     -->
-    <authentication mode="None"/>
+    <authentication mode="None" />
     <!--
           The <customErrors> section enables configuration 
           of what to do if/when an unhandled error occurs 
@@ -57,7 +57,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
     -->
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <!-- 
   Unconditionally allow all users access to the public folder and anything 
@@ -67,8 +67,16 @@
   <location path="public">
     <system.web>
       <authorization>
-        <allow users="?"/>
+        <allow users="?" />
       </authorization>
     </system.web>
   </location>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.4728.0" newVersion="2.5.4728.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
