--- a/Web.config
+++ b/Web.config
@@ -9,8 +9,8 @@
 -->
 <configuration>
   <appSettings>
-    <add key="ActiveDBName" value="Cypress"/>
-    <add key="Local" value="*Public/DG NET Local"/>
+    <add key="ActiveDBName" value="Local"/>
+    <add key="Local"   value="*Public/DG NET Local"/>
     <add key="Cypress" value="*Public/Cypress"/>
   </appSettings>
   <connectionStrings/>
@@ -29,7 +29,7 @@
             affects performance, set this value to true only 
             during development.
         -->
-    <compilation debug="false" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
