Get running on rp-win8-avr12 box

--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
 <configuration>
   <appSettings>
     <add key="ActiveDBName" value="Local"/>
-    <add key="Local"   value="*Public/DG NET Local"/>
+    <add key="Local" value="*Public/DG NET Local"/>
     <add key="Cypress" value="*Public/Cypress"/>
   </appSettings>
   <connectionStrings/>
@@ -29,7 +29,11 @@
             affects performance, set this value to true only 
             during development.
         -->
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </assemblies>
+    </compilation>
     <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
@@ -69,12 +73,5 @@
       </authorization>
     </system.web>
   </location>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.5.4728.0" newVersion="2.5.4728.0"/>
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+
 </configuration>
